@@ -6,6 +6,7 @@
 
 - stdout is prefixed with "link" or "copy"
 - stdout lists absolute DESTINATION, even when relative path is given
+- stdout will include SRC (RESOLVED_SRC) -> DESTINATION if SRC is, or is behind, a symlink
 
 ### Features
 
